# KingShot-Helper

./: .gitignore  README.md  pyproject.toml
src/kingshot_helper/: __init__.py  __main__.py
src/kingshot_helper/cli/: __init__.py  battle.py  buildings.py  events.py  gear.py  governor.py  hero.py  pets.py  profile.py  recommend.py  troops.py
src/kingshot_helper/data/: __init__.py  buildings.json  forgehammer.json  formations.json  gear_enhancement.json  gear_mithril.json  governor_charms.json  governor_gear.json  hero_shards.json  hero_xp.json  pet_levels.json  troop_costs.json  troop_points.json
src/kingshot_helper/display/: panels.py  tables.py
src/kingshot_helper/engines/: advisor.py  battle.py  buildings.py  events.py  gear.py  governor.py  heroes.py  pets.py  troops.py
src/kingshot_helper/models/: enums.py  profile.py
tests/: conftest.py  test_battle.py  test_gear.py  test_heroes.py  test_profile.py  test_troops.py
